--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,52 @@
 Flask==3.0.3
 gunicorn
 Flask-SQLAlchemy
+bcrypt==4.3.0
+blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+checksumdir==1.2.0
+click==8.1.8
+cmake==4.0.2
+colorama==0.4.6
+comtypes==1.4.11
+contourpy==1.3.3
+cycler==0.12.1
+et_xmlfile==2.0.0
+Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+fonttools==4.59.0
+greenlet==3.2.2
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+numpy==2.2.5
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.2.3
+pillow==11.3.0
+psycopg2-binary==2.9.10
+pyparsing==3.2.3
+pypiwin32==223
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pyttsx3==2.98
+pytz==2025.2
+pywin32==310
+razorpay==1.4.2
+requests==2.32.5
+seaborn==0.13.2
+setuptools==80.9.0
+six==1.17.0
+SQLAlchemy==2.0.41
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+gunicorn
